crates/plotnik-lib/tests/04-emit/linking/bare_supertype_quantified.txt
Q = (program (statement)* @s)
------------------ DIAGNOSTICS -------------------
error: `statement` is a supertype, not a node kind
 --> query.ptk:1:15
  |
1 | Q = (program (statement)* @s)
  |               ^^^^^^^^^
  |
help: match the concrete subtypes with an alternation, e.g. `[(a) (b)]`
help: subtypes of `statement`: `break_statement`, `continue_statement`, `debugger_statement`, `declaration`, `do_statement`, `empty_statement`, `export_statement`, `expression_statement`, ... (12 more)
